Universal access control - preparatory work (#84)
* Refactor for universal access control in SolidClient and SolidResource
* Refactor to move user/client setup from the test subject to test harness